Favicon and title

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Conference</title>
+
+    <title>WiDS Recife</title>
 
     <!-- css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
+
+    <link rel="icon" href="assets/images/logo.svg">
 </head>
 <body data-spy="scroll" data-target="#site-nav">
     <nav id="site-nav" class="navbar navbar-fixed-top navbar-custom">
@@ -23,7 +26,6 @@
                         
                         <!-- logo image  -->
                         <img src="assets/images/logo.svg" alt="Logo" width="60px">
-
                         WiDS Recife
                     </a>
                 </div>
