--- a/index.html
+++ b/index.html
@@ -479,10 +479,10 @@
                 </div>
                 <div class="col-md-6">
                     <ul class="social-block">
-                        <li><a href=""><i class="ion-social-twitter"></i></a></li>
-                        <li><a href=""><i class="ion-social-facebook"></i></a></li>
-                        <li><a href=""><i class="ion-social-linkedin-outline"></i></a></li>
-                        <li><a href=""><i class="ion-social-googleplus"></i></a></li>
+                        <li><a href="https://www.instagram.com/widsrecife/" target="__blank"><i class="ion-social-instagram-outline"></i></a></li>
+                        <li><a href="https://twitter.com/widsrecife" target="__blank"><i class="ion-social-twitter"></i></a></li>                        
+                        <li><a href="https://www.linkedin.com/company/women-in-data-science-recife" target="__blank"><i class="ion-social-linkedin-outline"></i></a></li>   
+                        <li><a href="mailto:widsrecife@gmail.com" target="__blank"><i class="ion-android-mail"></i></a></li>                      
                     </ul>
                 </div>
             </div>
