--- a/index.html
+++ b/index.html
@@ -480,8 +480,9 @@
                 <div class="col-md-6">
                     <ul class="social-block">
                         <li><a href="https://www.instagram.com/widsrecife/" target="__blank"><i class="ion-social-instagram-outline"></i></a></li>
-                        <li><a href="https://twitter.com/widsrecife" target="__blank"><i class="ion-social-twitter"></i></a></li>                        
-                        <li><a href="https://www.linkedin.com/company/women-in-data-science-recife" target="__blank"><i class="ion-social-linkedin-outline"></i></a></li>   
+                        <li><a href="https://github.com/widsrecife" target="__blank"><i class="ion-social-github"></i></a></li>
+                        <!-- <li><a href="https://twitter.com/widsrecife" target="__blank"><i class="ion-social-twitter"></i></a></li>                        
+                        <li><a href="https://www.linkedin.com/company/women-in-data-science-recife" target="__blank"><i class="ion-social-linkedin-outline"></i></a></li>    -->
                         <li><a href="mailto:widsrecife@gmail.com" target="__blank"><i class="ion-android-mail"></i></a></li>                      
                     </ul>
                 </div>
