--- a/index.html
+++ b/index.html
@@ -316,9 +316,8 @@
                             </div>
 
                             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-                                <div class="panel-body">
-                                    <h3>Hello</h3>
-                                    <p>Lorem Ipsum</p>
+                                <div class="panel-body">                                    
+                                    <p>Sim, todos os eventos promovidos pelo WiDS Recife são gratuitos e abertos a todas as pessoas interessadas em Ciência de Dados.</p>
                                 </div>
                             </div>
                         </div>
@@ -331,33 +330,37 @@
                             </div>
 
                             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                                <div class="panel-body">Hello</div>
+                                <div class="panel-body">
+                                    <p>Não, os eventos são abertos a todas as pessoas interessadas em Ciência de dados, no entanto a programação da conferência principal é composta apenas por pessoas que se identificam com o gênero feminino.</p>
+                                </div>
                             </div>
                         </div>
-  
-                        <!-- <div class="panel panel-default">
+
+                        <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingThree">
                                 <h4 class="panel-title">
-                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> Office address ?</a>
+                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> Tem que ser da área ou saber programar ?</a>
                                 </h4>
                             </div>
 
                             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                                <div class="panel-body">Hello</div>
+                                <div class="panel-body"><p>Os eventos tem diferentes níveis de conhecimento, então sugerimos ler a descrição daquele que você está interessada.</p></div>
                             </div>
                         </div>
 
                         <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingFour">
                                 <h4 class="panel-title">
-                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour"> How should I dress ?</a>
+                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour"> Como cancelo minha inscrição ?</a>
                                 </h4>
                             </div>
 
                             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-                                <div class="panel-body">Hello</div>
+                                <div class="panel-body"><p>Se você já se inscriveu em algum evento, mas não poderá ir, nos envia e-mail para <a href="mailto:widsrecife@gmail.com" target="__blank">widsrecife@gmail.com</a> ou manda inbox para um dos nossos perfis nas redes sociais. Assim poderemos repassar sua vaga para outra pessoa.</p></div>
                             </div>
                         </div>
+  
+                        <!--                        
 
                         <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingFive">
