update images links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
 
-    <link rel="icon" href="assets/images/logo.svg">
+    <link rel="icon" href="https://github.com/widsrecife/site-alternative/blob/gh-pages/assets/images/logo.svg">
 </head>
 <body data-spy="scroll" data-target="#site-nav">
     <nav id="site-nav" class="navbar navbar-fixed-top navbar-custom">
