--- a/index.html
+++ b/index.html
@@ -43,13 +43,18 @@
                 <ul class="nav navbar-nav navbar-right">
 
                     <!-- navigation menu -->
-                    <li class="active"><a data-scroll href="#about">About</a></li>
-                    <li><a data-scroll href="#speakers">Speakers</a></li>              
-                    <li><a data-scroll href="#schedule">Schedule</a></li>                  
-                    <li><a data-scroll href="#partner">Partner</a></li>                  
-                    <!-- <li><a data-scroll href="#">Sponsorship</a></li> -->
-                    <li><a data-scroll href="#faq">FAQ</a></li>
-                    <li><a data-scroll href="#photos">Photos</a></li>
+                    <li class="active"><a data-scroll href="#about">Sobre</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Conferências</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#facts">WiDS 2020</a></li>
+                            <li><a href="index_2019.html">WiDS 2019 (em breve)</a></li>
+                            <li><a href="index_2019.html">WiDS 2018 (em breve)</a></li>
+                            <li><a href="index_2019.html">WiDS 2017 (em breve)</a></li>
+                        </ul>
+                    </li>           
+                    <li><a data-scroll href="#faq">FAQ</a></li>                  
+                    <li><a data-scroll href="#schedule">Outros eventos</a></li>                                    
                 
                 </ul>
             </div>
