Add Data Beer Recife

--- a/index.html
+++ b/index.html
@@ -385,8 +385,26 @@
                     <h3 class="section-title">Outros eventos</h3>
                 </div>
             </div>
+            
 
             <div class="row">
+
+                <div class="col-md-4 col-sm-4">
+                    <a href="https://www.meetup.com/pt-BR/Cerveja-com-Dados/events/269146418/" target="__blank">
+                        <div class="welcome-section text-center waves-effect">
+                            <img src="assets/images/events/cerveja-com-dados.jpg" class="img-responsive" alt="..">
+                            <h4>Cerveja com Dados Recife</h4>
+                            <div class="border"></div>
+                            <p>
+                                <i class="ion-ios-calendar"></i> 12 mar. 2020 <br>
+                                <i class="ion-clock"></i> 19:00 às 22:00 <br>                            
+                                <i class="ion-ios-location"></i> A Caverna (R. Fernando Lopes, 78 - Graças)<br> 
+                                <i class="ion-android-bookmark"></i> Uso de dados no combate à violência contra a mulher
+                            </p>
+
+                        </div>
+                    </a>
+                </div>
                 
                 <div class="col-md-4 col-sm-4">
                     <a href="https://www.sympla.com.br/open-data-day-recife__800192" target="__blank">
