--- a/index.html
+++ b/index.html
@@ -224,55 +224,52 @@
                     <div class="speaker-invert">
 
                         <figure>
-                            <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-4.jpg">
+                            <img alt="" class="img-responsive center-block" src="assets/images/speakers/wids-2color-stacked.jpg">
                         </figure>
 
-                        <h4>Jhon Smith</h4>
-
-                        <p>CEO of Peren</p>
+                        <h4>Chaina Santos</h4>
 
                         <ul class="social-block">
                             <li><a href=""><i class="ion-social-twitter"></i></a></li>
                             <li><a href=""><i class="ion-social-facebook"></i></a></li>
                             <li><a href=""><i class="ion-social-linkedin-outline"></i></a></li>
-                            <li><a href=""><i class="ion-social-googleplus"></i></a></li>
+                            <li><a href=""><i class="ion-social-instagram-outline"></i></a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-4">
 
-                    <div class="speaker">
+                    <div class="speaker-invert">
 
                         <figure>
-                            <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-5.jpg">
+                            <img alt="" class="img-responsive center-block" src="assets/images/speakers/wids-2color-stacked.jpg">
                         </figure>
 
-                        <h4>Jhon Smith</h4>
-
-                        <p>CEO of Peren</p>
+                        <h4>Renata Kelly Marcelino</h4>
 
                         <ul class="social-block">
                             <li><a href=""><i class="ion-social-twitter"></i></a></li>
                             <li><a href=""><i class="ion-social-facebook"></i></a></li>
                             <li><a href=""><i class="ion-social-linkedin-outline"></i></a></li>
-                            <li><a href=""><i class="ion-social-googleplus"></i></a></li>
+                            <li><a href=""><i class="ion-social-instagram-outline"></i></a></li>
                         </ul>
-
                     </div>
                 </div>
 
                 <div class="col-md-4">
-                    <div class="speaker">
+                    <div class="speaker-invert">
+
                         <figure>
-                            <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-6.jpg">
+                            <img alt="" class="img-responsive center-block" src="assets/images/speakers/wids-2color-stacked.jpg">
                         </figure>
-                        <h4>Jhon Smith</h4>
-                        <p>CEO of Peren</p>
+
+                        <h4>Jessica Feliciano Coutinho</h4>
+
                         <ul class="social-block">
                             <li><a href=""><i class="ion-social-twitter"></i></a></li>
                             <li><a href=""><i class="ion-social-facebook"></i></a></li>
                             <li><a href=""><i class="ion-social-linkedin-outline"></i></a></li>
-                            <li><a href=""><i class="ion-social-googleplus"></i></a></li>
+                            <li><a href=""><i class="ion-social-instagram-outline"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -281,58 +278,73 @@
             <div class="row">
                 <div class="col-md-4">
 
-                    <div class="speaker">
+                    <div class="speaker-invert">
 
                         <figure>
-                            <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-4.jpg">
+                            <img alt="" class="img-responsive center-block" src="assets/images/speakers/wids-2color-stacked.jpg">
                         </figure>
 
-                        <h4>Jhon Smith</h4>
-
-                        <p>CEO of Peren</p>
+                        <h4>Caroline Wanderley Espinola</h4>
 
                         <ul class="social-block">
                             <li><a href=""><i class="ion-social-twitter"></i></a></li>
                             <li><a href=""><i class="ion-social-facebook"></i></a></li>
                             <li><a href=""><i class="ion-social-linkedin-outline"></i></a></li>
-                            <li><a href=""><i class="ion-social-googleplus"></i></a></li>
+                            <li><a href=""><i class="ion-social-instagram-outline"></i></a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-4">
 
-                    <div class="speaker">
+                    <div class="speaker-invert">
 
                         <figure>
-                            <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-5.jpg">
+                            <img alt="" class="img-responsive center-block" src="assets/images/speakers/wids-2color-stacked.jpg">
                         </figure>
 
-                        <h4>Jhon Smith</h4>
-
-                        <p>CEO of Peren</p>
+                        <h4>Taísa Silveira</h4>
 
                         <ul class="social-block">
                             <li><a href=""><i class="ion-social-twitter"></i></a></li>
                             <li><a href=""><i class="ion-social-facebook"></i></a></li>
                             <li><a href=""><i class="ion-social-linkedin-outline"></i></a></li>
-                            <li><a href=""><i class="ion-social-googleplus"></i></a></li>
+                            <li><a href=""><i class="ion-social-instagram-outline"></i></a></li>
                         </ul>
-
                     </div>
                 </div>
 
                 <div class="col-md-4">
-                    <div class="speaker">
+                    <div class="speaker-invert">
+
                         <figure>
-                            <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-6.jpg">
+                            <img alt="" class="img-responsive center-block" src="assets/images/speakers/wids-2color-stacked.jpg">
                         </figure>
-                        <h4>Jhon Smith</h4>
-                        <p>CEO of Peren</p>
+
+                        <h4>Dandara Sousa</h4>
+
                         <ul class="social-block">
                             <li><a href=""><i class="ion-social-twitter"></i></a></li>
                             <li><a href=""><i class="ion-social-facebook"></i></a></li>
                             <li><a href=""><i class="ion-social-linkedin-outline"></i></a></li>
-                            <li><a href=""><i class="ion-social-googleplus"></i></a></li>
+                            <li><a href=""><i class="ion-social-instagram-outline"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="speaker-invert">
+
+                        <figure>
+                            <img alt="" class="img-responsive center-block" src="assets/images/speakers/wids-2color-stacked.jpg">
+                        </figure>
+
+                        <h4>Giulia Falcão</h4>
+
+                        <ul class="social-block">
+                            <li><a href=""><i class="ion-social-twitter"></i></a></li>
+                            <li><a href=""><i class="ion-social-facebook"></i></a></li>
+                            <li><a href=""><i class="ion-social-linkedin-outline"></i></a></li>
+                            <li><a href=""><i class="ion-social-instagram-outline"></i></a></li>
                         </ul>
                     </div>
                 </div>
